# messenger_service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.stg.yaml  docker-compose.yaml
.github/workflows/: rust.yml
assets/: styles.css
migrations/2025-06-08-211927_create_users/: up.sql
migrations/2025-06-08-214125_create_contacts/: up.sql
migrations/2025-06-09-200333_create_talks/: down.sql  up.sql
migrations/2025-06-09-200446_create_messages/: down.sql  up.sql
migrations/2025-06-09-200539_create_chats/: down.sql  up.sql
migrations/2025-06-09-200649_create_groups/: up.sql
migrations/2025-06-21-122536_fn_chats_for_user/: down.sql  up.sql
migrations/2025-06-21-122536_fn_groups_by_user_id/: down.sql  up.sql
migrations/2025-06-29-115307_update_last_message_trigger/: down.sql  up.sql
requests/: http-client.env.json  requests.http
src/: auth.rs  chat.rs  error.rs  event.rs  group.rs  handler.rs  integration.rs  lib.rs  main.rs  markup.rs  message.rs  model.rs  models.rs  repository.rs  result.rs  schema.rs  state.rs  user.rs  util.rs  ws.rs
src/auth/: api.rs  error.rs  handler.rs  markup.rs  middleware.rs  mod.rs  model.rs  service.rs  template.rs
src/cache/: client.rs
src/chat/: api.rs  error.rs  handler.rs  markup.rs  mod.rs  model.rs  repository.rs  service.rs
src/contact/: handler.rs  markup.rs  mod.rs  model.rs  repository.rs  service.rs
src/db/: client.rs
src/error/: model.rs
src/event/: api.rs  context.rs  error.rs  handler.rs  markup.rs  mod.rs  model.rs  service.rs
src/group/: mod.rs  model.rs
src/integration/: amqp.rs  cache.rs  client.rs  db.rs  error.rs  idp.rs  mod.rs  model.rs  mongo.rs  pubsub.rs  redis.rs  storage.rs  tests.rs
src/message/: api.rs  error.rs  handler.rs  markup.rs  mod.rs  model.rs  repository.rs  service.rs
src/queue/: client.rs
src/settings/: markup.rs  mod.rs
src/talk/: handler.rs  markup.rs  mod.rs  model.rs  repository.rs  service.rs
src/thread/: handler.rs  mod.rs  model.rs
src/user/: api.rs  error.rs  handler.rs  markup.rs  middleware.rs  mod.rs  model.rs  repository.rs  service.rs  tests.rs
src/ws/: client.rs  handler.rs  mod.rs  model.rs  service.rs
static/: scripts.js
tests/: messages.rs  rabbitmq.rs  redis.rs  repository.rs  users.rs
