[package]
name = "messenger_service"
version = "0.2.0"
edition = "2024"

[dependencies]
log = "0.4.26"
simplelog = "0.12.2"
dotenv = "0.15.0"
chrono = "0.4.40"
uuid = { version = "1.15.1", features = ["serde", "v4", "v7"] }
thiserror = "2.0.12"

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
text-splitter = "0.24.1"

tokio = { version = "1.44.0", features = ["macros", "sync", "rt-multi-thread"] }
async-stream = "0.3.6"
async-trait = "0.1.88"
futures = { version = "0.3.31", default-features = false }

axum = { version = "0.8.1", features = ["ws", "macros"] }
axum-server = { version = "0.7.1", features = ["tls-openssl"] }
axum-extra = { version = "0.10.0", features = [
    "cookie",
    "query",
    "typed-header",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
reqwest = { version = "0.12.12", features = ["json"] }
url = "2.5.4"
jsonwebtoken = "9.3.1"
oauth2 = "4.4.2"
maud = { version = "0.27.0", features = ["axum"] }

mongodb = "3.2.2"
redis = { version = "0.29.1", features = [
    "connection-manager",
    "tokio-comp",
    "json",
] }
async-nats = "0.39.0"
