[package]
name = "messenger_service"
version = "0.2.0"
edition = "2024"

[dependencies]
log = "0.4.27"
simplelog = "0.12.2"
dotenv = "0.15.0"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
bytes = "1.10.1"
thiserror = "2.0.12"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
text-splitter = "0.25.1"

tokio = { version = "1.44.2", features = ["macros", "sync", "rt-multi-thread"] }
async-stream = "0.3.6"
async-trait = "0.1.88"
futures = { version = "0.3.31", default-features = false }

axum = { version = "0.8.3", features = ["ws", "macros"] }
axum-server = { version = "0.7.2", features = ["tls-openssl"] }
axum-extra = { version = "0.10.1", features = [
    "cookie",
    "query",
    "typed-header",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
reqwest = { version = "0.12.15", features = ["json"] }
url = "2.5.4"
jsonwebtoken = "9.3.1"
oauth2 = "4.4.2"
maud = { version = "0.27.0", features = ["axum"] }

mongodb = "3.2.3"
redis = { version = "0.29.5", features = [
    "connection-manager",
    "tokio-comp",
    "json",
] }
async-nats = "0.39.0"
